# IR209-develloppement-2022-2023

./: README.md  code coté serveur.c  code côté client.c
Code V0.1/: code coté serveur.c
Code V2.0-alpha/: CMakeLists.txt
Code V2.0-alpha/code/: client.c  encryption.c  encryption.h  receiver.h  sender.h  server.c
code/: receiver.c  sender.h
code V1.0-alpha/code/: client.c  receiver.h  sender.c  server.c
code V1.0/code/: client.c  sender.c  server.c
